--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -124,7 +124,6 @@ main {
   font-size: 35px;
   color: #181818;
   margin-top: 30px;
-
 }
 .what-info-description {
   font-weight: 400;
@@ -137,7 +136,6 @@ main {
   display: flex;
   column-gap: 24px;
   justify-content: space-evenly;
- 
 }
 /* .skill {
   background: #FFFFFF;
@@ -149,20 +147,16 @@ main {
  
  
 } */
-.skill{
-
-background: #FFFFFF;
-box-shadow: 0px 6px 50px rgba(0, 0, 0, 0.06);
-border-radius: 5px;
-padding: 30px;
-
-  
+.skill {
+  background: #ffffff;
+  box-shadow: 0px 6px 50px rgba(0, 0, 0, 0.06);
+  border-radius: 5px;
+  padding: 30px;
 }
 .skill-title {
   font-weight: 700;
   font-size: 20px;
   color: #181818;
- 
 }
 .skill-description {
   font-weight: 400;
@@ -170,4 +164,47 @@ padding: 30px;
   color: #757575;
 }
 /* resume part */
-
+.resume-heading {
+  text-align: center;
+  margin-top: 130px;
+  font-weight: 700;
+  font-size: 35px;
+  color: #181818;
+}
+.resume-content {
+  display: flex;
+  justify-content: space-evenly;
+  gap: 24px;
+}
+.resume-title {
+  font-weight: 700;
+  font-size: 30px;
+  color: #474747;
+}
+.resume-master {
+  font-weight: 700;
+  font-size: 25px;
+  color: #474747;
+  margin-bottom: 10px;
+}
+.resume-harvard{
+  font-weight: 600;
+  font-size: 20px;
+  color: #757575;
+  margin-bottom: 20px;
+}
+.resume-skill{
+  font-weight: 400;
+  font-size: 16px;
+  color: #757575;
+}
+.resume-item{
+  margin: 30px 0px;
+}
+.bton
+{
+  margin-top: 50px;
+  text-align: center;
+  
+}
+ 
